statusapp/manifests/01-deployment.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: statusapp
  namespace: statusapp
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  strategy:
    blueGreen:
      activeService: statusapp
      previewService: statusapp-new
      autoPromotionEnabled: false
  selector:
    matchLabels:
      app.kubernetes.io/name: statusapp
  template:
    metadata:
      labels:
        app.kubernetes.io/name: statusapp
    spec:
      containers:
      - image: quinont/statusapp:v1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /hc
            port: http
            scheme: HTTP
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 5
        name: statusapp
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /hc
            port: http
            scheme: HTTP
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 5
      terminationGracePeriodSeconds: 30
